# glfw_test

./: CMakeLists.txt  README.md
assets/objects/cube/: cube.blend  cube.mtl
assets/shaders/fragment/: standard.frag
assets/shaders/standard/: standard.frag  standard.vert
assets/shaders/vertex/: standard.vert
src/: callbacks.cpp  callbacks.h  camera.cpp  camera.h  config.cpp  config.h  main.cpp  shader.cpp  shader.h  util.cpp  util.h
src/engine/: AssetLoader.cpp  AssetLoader.h  Game.cpp  Game.h  Lightning.cpp  Lightning.h  ObjFile.cpp  ObjFile.h  Tree.cpp  Tree.h  loaders.cpp  loaders.h  tinydir.h
src/engine/drivers/: tree_driver.cpp
src/game_object/: CubeObject.cpp  CubeObject.h  GameObject.cpp  GameObject.h  MeshObject.cpp  MeshObject.h  RenderObject.cpp  RenderObject.h  load_obj.cpp  load_obj.h
src/gl/: GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h
